--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
-body {margin: 0px}
+body {margin: 0px;
+      width: 100%;}
 
 /*CSS Code für Header und Menü - Start*/
 header {position:fixed;
@@ -43,20 +44,21 @@ main {margin-top: 100px;
 
 /*CSS Code für Bildergalerie - Start*/
 .galerie {display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
           justify-content: space-around;}
 .hovertitle {
   background-color: #000;
   color: #fff;
-  display: inline-block;
+  display: block;
   font-family: Arial, sans-serif;
   font-size: 24px;
   margin: 8px;
-  max-width: 315px;
-  min-width: 230px;
   overflow: hidden;
   position: relative;
   text-align: center;
-  width: 100%;
+  width: 30%;
+  max-width: 440px;
 }
 
 .hovertitle img {
@@ -101,21 +103,29 @@ main {margin-top: 100px;
 }
 /*CSS Code für Bildergalerie - Ende*/
 
+/*CSS Code für den Kontakt -Start*/
+iframe {display:inline-block;
+        width: 60%;
+        height: 300px}
+ /*CSS Code für den Kontakt -Ende*/
 
 /* Media queryDesktop */
-@mediascreen and(min-width:1080px)
+@media screen and(min-width:1080px)
 {/* defaultDesktop CSS */
 
 }
 
 /* Tablet, SmallerDesktops, LandscapeSmartphones */
-@mediascreen and(max-width:1079px) and(min-width: 401px)
+@media screen and (max-width:1079px)
+              and (min-width: 401px)
 {/* Tablet CSS */
+.hovertitle {width: 45%;}
 
 }
 
 /* Portrait Smartphones */
-@mediascreen and(max-width:400px)
+@media screen and (max-width: 400px)
 {/* Smartphone CSS */
-
+.galerie {flex-direction: column;}
+.hovertitle {width: 90%;}
 }
