--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,8 @@ header {position:fixed;
         width: 100%;
         background-color: #fff;
         height:70px;
-        z-index: 7
+        z-index: 7;
+        box-shadow:;
         }
 header h1 {margin-block-start: 0.3em;
           margin-block-end: 0.3em;}
@@ -34,6 +35,7 @@ navbar ul li a {
                 text-decoration: none;
                 color: #000;
                 font-family: 'Abel', sans-serif;}
+#menubutton {display:none;}
 /*CSS Code für Header und Menü - Ende*/
 
 main {margin-top: 100px;
@@ -133,32 +135,55 @@ iframe {border: none;
 }
 
 /* Tablet, SmallerDesktops, LandscapeSmartphones */
-@media screen and (max-width:1079px)
-              and (min-width: 401px){
-/* Tablet CSS*/
-  .hovertitle.portfolio {width: 45%;}
-  .hovertitle.team {min-width: none;}
-  .kontakt {flex-direction: column;}
-  .kontakt p {width: 100%;
-              max-height: 200px;
-              min-height: 0px;}
-  iframe {width: 100%;
-          max-height: 300px;
-          min-height: 0px;}
-}
+    @media screen and (max-width:1079px)
+                    and (min-width: 401px){
+      /* Tablet CSS*/
+      /*CSS Code für Header und Menü - Start*/
+      navbar {display: none}
+      navbar ul {flex-direction: column;}
+      navbar ul li {display: block;}
+      #menubutton {display:inline-block;}
+      /*CSS Code für Header und Menü - Ende*/
+
+      /*CSS Code für Bildergalerie und Team- Start*/
+        .hovertitle.portfolio {width: 45%;}
+        .hovertitle.team {min-width: none;}
+        /*CSS Code für Bildergalerie und Team- Ende*/
+        /*CSS Code für Kontakt- Start*/
+        .kontakt {flex-direction: column;}
+        .kontakt p {width: 100%;
+                    max-height: 200px;
+                    min-height: 0px;}
+        iframe {width: 100%;
+                max-height: 300px;
+                min-height: 0px;}
+      /*CSS Code für Kontakt- Ende*/
+      }
 
 /* Portrait Smartphones */
-@media screen and (max-width:400px){
-/* Smartphone CSS */
-  .galerie {flex-direction: column;
-            align-items: center;}
-  .hovertitle.portfolio {width: 90%;}
-  .hovertitle.team {width: 90%;}
-  .kontakt {flex-direction: column;}
-  .kontakt p {width: 100%;
-              max-height: 150px;
-              min-height: 0px;}
-  iframe {width: 100%;
-          max-height: 150px;
-          min-height: 0px;}
-}
+    @media screen and (max-width:400px){
+      /* Smartphone CSS */
+      /*CSS Code für Header und Menü - Start*/
+      navbar {display: none}
+      navbar ul {flex-direction: column;}
+      navbar ul li {display: block;}
+      #menubutton {display:inline-block;}
+      /*CSS Code für Header und Menü - Ende*/
+
+      /*CSS Code für Bildergalerie und Team- Start*/
+        .galerie {flex-direction: column;
+                  align-items: center;}
+        .hovertitle.portfolio {width: 90%;}
+        .hovertitle.team {width: 90%;}
+        /*CSS Code für Bildergalerie und Team- Ende*/
+
+        /*CSS Code für Kontakt- Start*/
+        .kontakt {flex-direction: column;}
+        .kontakt p {width: 100%;
+                    max-height: 150px;
+                    min-height: 0px;}
+        iframe {width: 100%;
+                max-height: 150px;
+                min-height: 0px;}
+      /*CSS Code für Kontakt- Ende*/
+      }
