--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,12 +15,12 @@ header {position:fixed;
         display: flex;
         justify-content: flex-start;
         align-items: baseline;
-        padding: 10px 30px 10px 10px;
+        padding: 10px 10px 10px 10px;
         width: 100%;
-        background-color: #fff;
-        height:70px;
+        min-height: 70px;
         z-index: 7;
-        box-shadow:;
+        background-color: #808080;
+        box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2), 0 1px 10px 0 rgba(0,0,0,0.15);
         }
 header h1 {margin-block-start: 0.3em;
           margin-block-end: 0.3em;}
@@ -139,10 +139,12 @@ iframe {border: none;
                     and (min-width: 401px){
       /* Tablet CSS*/
       /*CSS Code für Header und Menü - Start*/
-      navbar {display: none}
+      navbar {display: none;}
       navbar ul {flex-direction: column;}
-      navbar ul li {display: block;}
-      #menubutton {display:inline-block;}
+      #menubutton {
+                  display:inline;
+                  width: 50px;
+                  margin:auto 10px auto auto }
       /*CSS Code für Header und Menü - Ende*/
 
       /*CSS Code für Bildergalerie und Team- Start*/
@@ -164,10 +166,14 @@ iframe {border: none;
     @media screen and (max-width:400px){
       /* Smartphone CSS */
       /*CSS Code für Header und Menü - Start*/
-      navbar {display: none}
+      navbar {display: none;
+              flex-direction: column;}
       navbar ul {flex-direction: column;}
-      navbar ul li {display: block;}
-      #menubutton {display:inline-block;}
+      /*navbar ul {flex-direction: column;}*/
+      #menubutton {
+                  width: 50px;
+                  display:inline;
+                  }
       /*CSS Code für Header und Menü - Ende*/
 
       /*CSS Code für Bildergalerie und Team- Start*/
