--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,8 @@ html, body {margin: 0;
               margin:0px auto;}
 
 h1,h2,h3,h4,h5 {font-family: 'Abel', sans-serif;}
-p, a, li, summary {font-family: 'Open Sans', sans-serif;}
+p, a, li, summary {font-family: 'Open Sans', sans-serif;
+                    font-size: 16px}
 /*CSS Code für Header und Menü - Start*/
 header {position:fixed;
         top: 0;
@@ -66,7 +67,6 @@ main {margin-top: 100px;
   color: #fff;
   display: block;
   font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
   margin: 8px;
   overflow: hidden;
   position: relative;
@@ -74,7 +74,7 @@ main {margin-top: 100px;
   max-width: 440px;
 }
 .hovertitle.portfolio {width: 30%;}
-.hovertitle.team {width: 30%; font-size: 15px;}
+.hovertitle.team {width: 30%;}
 
 .hovertitle img {
   vertical-align: top;
@@ -82,6 +82,7 @@ main {margin-top: 100px;
 }
 .hovertitle figcaption {
   position: absolute;
+  padding: 10px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -96,15 +97,8 @@ main {margin-top: 100px;
   z-index: 2;
 }
 .hovertitle h3 {
-  font-size: 1em;
   font-weight: 400;
-  letter-spacing: 1px;
   margin: 0;
-  text-transform: uppercase;
-}
-.hovertitle h3 span {
-  display: block;
-  font-weight: 700;
 }
 
 /* Dieser Teil macht das Bild bei Hover dunkler*/.hovertitle:hover > img,
