--- a/stylesheet.css
+++ b/stylesheet.css
@@ -189,5 +189,5 @@ iframe {border: none;
       }
 
 /* CSS Code für Impressum - Start */
-      .impressum p {font-size: 13px; line-height: 5px;}
+      .impressum p {font-size: 13px;}
 /* CSS Code für Impressum - Ende */
