--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ main {margin-top: 100px;
   overflow: hidden;
   position: relative;
   text-align: center;
-  max-width: 440px;
+  max-width: 400px;
 }
 .hovertitle.portfolio {width: 30%;}
 .hovertitle.team {width: 30%;}
@@ -132,7 +132,7 @@ iframe {border: none;
  /*CSS Code für den Kontakt -Ende*/
 
 /*CSS Code für den Karrierebereich -Start*/
-details {content: '+'}
+details {}
 /*CSS Code für den Karrierebereich -Ende*/
 
 /* Media queryDesktop */
@@ -204,5 +204,5 @@ details {content: '+'}
       }
 
 /* CSS Code für Impressum - Start */
-      .impressum p {font-size: 13px;}
+      .impressum p {font-size: 13px; line-height: 5px;}
 /* CSS Code für Impressum - Ende */
