--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,8 @@ main {margin-top: 100px;
       margin: 0 1em;
       flex-basis: auto;}
 .logo img {width: 100%;}
+
+.logo a {target:_blank;}
 /*CSS Code für Referenzen und Partner - Ende*/
 
 /*CSS Code für Bildergalerie und Team- Start*/
