--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,11 +18,6 @@ a {text-decoration: none;}
 main h2, main h3, input, select {margin-left: 10px;}
 main p,main ul, details {padding-left: 10px;}
 main h2 {text-align: center;}
-details {align-self: center;
-        border:1px solid;
-        border-color: #808080;
-        padding:10px;
-        margin: 20px 10px 20px 10px;}
 ul {list-style-position: inside;}
 /*CSS Code für Header und Menü - Start*/
 header {position:fixed;
@@ -144,7 +139,22 @@ iframe {border: none;
  /*CSS Code für den Kontakt -Ende*/
 
 /*CSS Code für den Karrierebereich -Start*/
-details {}
+details {
+        border:1px solid;
+        border-color: #808080;
+        padding:10px;
+        margin: 20px 10px 20px 10px;}
+.formularfeld {
+        border:1px solid;
+        border-color: #808080;
+        padding:10px;
+        margin:5px 10px 5px 10px;
+        width:100%;}
+.Bewerbungsformular {display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-around;}
+.Bewerbungsformular div {width: 31%;}
+.breit {width: 100%;}
 /*CSS Code für den Karrierebereich -Ende*/
 
 /* Media queryDesktop */
