--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,11 +11,12 @@ html, body {margin: 0;
             margin-bottom: 100px}
 h1,h2,h3,h4,h5 {font-family: 'Abel', sans-serif;
                 margin:5px;}
-p, a, li, summary {font-family: 'Open Sans', sans-serif;
-                    font-size: 16px;
-                    margin:0px;}
+p, a, li, summary,label {font-family: 'Open Sans', sans-serif;
+                        font-size: 16px;
+                        margin:0px;
+                        font-weight: normal;}
 a {text-decoration: none;}
-main h2, main h3, input, select {margin-left: 10px;}
+main h2, main h3{margin-left: 10px;}
 main p,main ul, details {padding-left: 10px;}
 main h2 {text-align: center;}
 ul {list-style-position: inside;}
@@ -163,16 +164,48 @@ details {
         border:1px solid;
         border-color: #808080;
         padding:10px;
-        margin:5px 10px 5px 0px;
         width:100%;}
 .Bewerbungsformular {display: flex;
                     flex-wrap: wrap;
-                    justify-content: space-around;
-                    margin: 0px 10px 0px 0px}
+                    justify-content: space-around;}
 .drittel {width: 31%;}
-.breit {width: 100%;
-        margin: 0px 10px 0px 10px;}
-.Bewerbungsformular h3 {margin-left: 0px}
+.Bewerbungsformular h3 {margin-left: 0px;}
+button#send {
+        padding: 10px;
+        width: 100%;
+        background-color: #808080;
+        color: #fff;
+        border:1px solid;
+        border-color: #808080;
+        margin:34px auto 0px auto;}
+
+.file-upload {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.file-upload__label {
+  display: block;
+  padding: 10px;
+  background-color: #808080;
+  color: #fff;
+  border:1px solid;
+  border-color: #808080;
+  opacity: 0.5;
+}
+
+.file-upload__input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  font-size: 1;
+  width: 0;
+  height: 100%;
+  opacity: 0;
+}
 /*CSS Code für den Karrierebereich -Ende*/
 
 /* Media queryDesktop */
