--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ html, body {
   padding: 0;
   width: 100%;
 }
-	  
+
 .nichtbreiter{
   max-width: 1080px;
   margin:0px auto;
@@ -17,12 +17,12 @@ html, body {
   margin-top:100px;
   margin-bottom: 100px
 }
-			
+
 h1,h2,h3,h4,h5 {
   font-family: 'Abel', sans-serif;
   margin:5px;
 }
-				
+
 p, a, li, summary {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -33,7 +33,7 @@ a {
   text-decoration: none;
   color:inherit;
 }
-  
+
 main h2, main h3, input, select {margin-left: 10px;}
 main p,main ul, details {padding-left: 10px;}
 main h2 {text-align: center;}
@@ -55,31 +55,31 @@ header {
   background-color: #808080;
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2), 0 1px 10px 0 rgba(0,0,0,0.15);
 }
-		
+
 header h1 {
   margin-block-start: 0.3em;
   margin-block-end: 0.3em;
   color: #fff;
   font-weight: normal;
 }
-		
+
 navbar {
   margin-left: 30px;
   display:inline;
 }
-		
+
 navbar ul {
   display: flex;
   justify-content:space-between;
   padding: 0px;
   margin: 0px;
 }
-		
+
 navbar ul li {
   display: inline-block;
   padding: 5px;
 }
-  
+
 navbar ul li a {
   text-decoration: none;
   color: #fff;
@@ -111,7 +111,7 @@ main {
   justify-content: space-around;
   padding: 20px;
 }
-	  
+
 .logo {
   width:8em;
   margin: 0 1em;
@@ -122,7 +122,7 @@ main {
 
 .logo a {opacity: 0.5;}
 
-		 
+
 .logo a:hover {opacity:1}
 
 
@@ -136,7 +136,7 @@ main {
   flex-wrap: wrap;
   justify-content: space-around;
 }
-		  
+
 .hovertitle {
   background-color: #000;
   color: #fff;
@@ -208,9 +208,9 @@ iframe {
 }
 /*CSS Code für den Kontakt -Ende*/
 
- 
- 
- 
+
+
+
 /*CSS Code für den Karrierebereich -Start*/
 details {
   border:1px solid;
@@ -265,39 +265,39 @@ details {
 		flex-wrap: wrap;
         align-items: flex-start;
 	  }
-			  
+
       navbar {
 		display: none;
         width: 100%;
         max-width: 648px;
         margin: 0px auto 0px 205.5px;
 	  }
-	  
+
       navbar ul {flex-direction: column;}
-	  
+
       navbar ul li {
 		border-bottom: 1px solid;
         border-color: rgba(255,255,255,0.5);
       }
-	  
+
       #menubutton {display:inline;}
       /*CSS Code für Header und Menü - Ende*/
 
       /*CSS Code für Bildergalerie und Team- Start*/
         .hovertitle.portfolio {width: 45%;}
-        
+
 		.hovertitle.team {min-width: none;}
 		 /*CSS Code für Bildergalerie und Team- Ende*/
-		
+
         /*CSS Code für Kontakt- Start*/
         .kontakt {flex-direction: column;}
-        
+
 		.kontakt p {
 		  width: 100%;
           max-height: 200px;
 		  min-height: 0px;
 		}
-		 
+
         iframe {
 		  width: 100%;
           max-height: 300px;
@@ -314,20 +314,20 @@ details {
 		flex-wrap: wrap;
         align-items: flex-start;
 	  }
-			  
+
       navbar {
 	    display: none;
         width:100%;
         margin: 0px 205.5px 0px 205.5px;
 	  }
-			  
+
       navbar ul {flex-direction: column;}
-	  
+
       navbar ul li {
 		border-bottom: 1px solid;
         border-color: rgba(255,255,255,0.5);
       }
-	  
+
       #menubutton {display:inline;}
       /*CSS Code für Header und Menü - Ende*/
 
@@ -337,30 +337,31 @@ details {
           align-items: center;
 		}
         .hovertitle.portfolio {width: 90%;}
-		
+
         .hovertitle.team {width: 90%;}
         /*CSS Code für Bildergalerie und Team- Ende*/
 
         /*CSS Code für Kontakt- Start*/
         .kontakt {flex-direction: column;}
-		
+
         .kontakt p {
 		  width: 100%;
           max-height: 150px;
           min-height: 0px;
 		}
-		  
+
         iframe {
 		  width: 100%;
           max-height: 150px;
           min-height: 0px;
 		}
-		
+
       /*CSS Code für Kontakt- Ende*/
     }
 
 /*------------------media queries ende------------------*/
-	  
+
 /* CSS Code für Impressum - Start */
+.impressum div {display: flex; justify-content: space-between;}
 .impressum p {font-size: 14px;}
 /* CSS Code für Impressum - Ende */
